	  Toolchain.defs file that can be used to manage toolchains in a more
	  configurable way.  Contributed by Mike Smith
	* configs/stm32f4discovery/winbuild and configs/cloudctrl:  Adapted to use
	  Mike's Toolchain.defs.
	* tools/configure.sh:  Adapted to handle paths and setenv.bat files correctly
	  for native Windows builds.
	* More of build files:  AVR and AVR32 Make.defs now include a common
	  Toolchain.defs file that can be used to manage toolchains in a more
	  configurable way.  Contributed by Mike Smith
	* tools/incdir.sh and incdir.bat: Add -s option to generate system header
	  file paths.
	* nuttx/arch/arm/src/arm/Toolchain.defs: Add support for more ARM toolchains
	  (from Mike Smith).
	* arch/arm/src/stm32/stm32f40xxx_rcc.c:  Enabled FLASH prefetch (from Petteri
	  Aimonen).
	* graphics/nxtk/nxtk_filltrapwindow.c:  Correct an offset problem (from
	  Peterri Aimonen).
	* graphics/nxglib/nxglib_splitline.c:  Fix error in drawing of near horizontal
	  lines (from Peterri Aimonen).
	* sched/task_exithook.c:  Missing right bracket with certain conditional
	  compilation (thanks James Goppert).
	* arch/arm/srch/stm32/stm32_otgfshost.c:  Replace timeout handling; use
	  system tick instead of frame counter.  The frame counter gets rset to
	  zero at 0x3fff making it error prone.
	* arch/arm/src/stm32/stm32f20xx_rcc.c and stm32f40xx_rcc.c: Added option
	  CONFIG_STM32_FLASH_PREFETCH.  FLASH prefetch will now only be enabled
	  if this option is selected.
	* confgs/ez80f910200zco/ostest:  Now used Kconfig/mconfig configuration
	  tool. Updated to build in native Windows environment.  Other ez80f910200zco
	  build scripts also updated.
	* configs/z8f64200100kit/ostest: Update to same level as ez80 configurations.
	* nuttx/configs/z8f64200100kit/scripts/setenv.bat: Add support for native
	  Windows build.
	* nuttx/arch/arm/src/lpc17xx/lpc17_i2c.c: Resources not being released when
	  I2C is uninitialized.