@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttShell (NSH)</i></font></big></h1>
-      <p>Last Updated: November 9, 2012</p>
+      <p>Last Updated: November 27, 2012</p>
     </td>
   </tr>
 </table>
@@ -1219,7 +1219,7 @@ hexdump &lt;file or device&gt;
 
 <p><b>Command Syntax:</b></p>
 <ul><pre>
-ifconfig [nic_name [ip]] [dr|gw|gateway &lt;dr-address&gt;] [netmask &lt;net-mask&gt;] [dns &lt;dns-address&gt;] [hw &lt;hw-mac&gt;]]
+ifconfig [nic_name [&lt;ip-address&gt;|dhcp]] [dr|gw|gateway &lt;dr-address&gt;] [netmask &lt;net-mask&gt;] [dns &lt;dns-address&gt;] [hw &lt;hw-mac&gt;]]
 </pre></ul>
 <p>
   <b>Synopsis</b>.
